<resources>
    <string name="app_name">HTTP Data Widget</string>
    <string name="appwidget_label">Label</string>
    <string name="appwidget_label_hint">Presented on the widget above the value from the server.</string>
    <string name="appwidget_datasource">Datasource</string>
    <string name="appwidget_datasource_hint">HTTP request issued to retrieve data for the widget. Select existing or create new one.</string>
    <string name="appwidget_interval">Automatic update</string>
    <string name="appwidget_path">Path</string>
    <string name="appwidget_path_hint">Response field that will be retrieved and displayed on the widget. For example: data.post.title</string>
    <string name="appwidget_content">Loading...</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Save widget</string>
    <string name="textfield_name">Name</string>
    <string name="textfield_url">URL</string>
    <string name="button_save">Save</string>
</resources>
