<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme"
        app:title="Configure widget"
        app:titleTextColor="@color/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/appwidget_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/appwidget_label" />

                <TextView
                    style="@style/Hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/appwidget_label_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/view"
                style="@style/Divider.Horizontal.Padded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/appwidget_datasource"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:spinnerMode="dialog" />

            <TextView
                style="@style/Hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appwidget_datasource_hint" />

            <View
                style="@style/Divider.Horizontal.Padded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/appwidget_path"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/appwidget_path" />

                <TextView
                    style="@style/Hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/appwidget_path_hint" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:text="@string/add_widget"
        android:textColor="@color/colorPrimary" />

</LinearLayout>